--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           docker build -t kurkasebastian/projektarbeit:latest .
          # echo "${{ secrets.CI_CD_GITHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-         # docker tag projektarbeit ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest
+          docker tag projektarbeit ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest
   
 env:
