--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,12 @@ jobs:
       - name: Build Docker Image
         run: |
           docker build -t kurkasebastian/projektarbeit:latest .
+          docker push kurkasebastian/projektarbeit:latest
          # echo "${{ secrets.CI_CD_GITHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
          # docker tag projektarbeit ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest
-         # docker push ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest
   
-env:
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  CI_CD_GITHUB_TOKEN: ${{secrets.CI_CD_GITHUB_TOKEN}}
+#env:
+#  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+#  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+#  CI_CD_GITHUB_TOKEN: ${{secrets.CI_CD_GITHUB_TOKEN}}
 
