--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,13 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Build Docker Image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to Docker Hub
+        run: echo "Sebi-6678253" | docker login -u "kurkasebastian" --password-stdin
+
+      - name: Build and push Docker image
         run: |
           docker build -t kurkasebastian/projektarbeit:latest .
           docker push kurkasebastian/projektarbeit:latest
