--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,12 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to Docker Hub
-        run: echo "Sebi-6678253" | docker login -u "kurkasebastian" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build and push Docker image
         run: |
-          docker build -t kurkasebastian/projektarbeit:latest .
-          docker push kurkasebastian/projektarbeit:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest
          # echo "${{ secrets.CI_CD_GITHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
          # docker tag projektarbeit ${{ secrets.DOCKER_USERNAME }}/projektarbeit:latest
   
